.provarCaches/00D410000011HE0EAM/objects/rstk__ictrdvdmdcst__c.object
<CustomObject>
    <description>ictrdvdmdcst__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__ictrdvdmdcst_ordno__c &amp; &apos;_&apos; &amp;  rstk__ictrdvdmdcst_item__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_comments__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ictrdvdmdcsts</relationshipLabel>
        <relationshipName>ictrdvdmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Item No</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ictrdvdmdcsts</relationshipLabel>
        <relationshipName>ictrdvdmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_lne__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Line No</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_loctype__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Loc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_lotno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ordno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Order No</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ictrdvdmdcsts</relationshipLabel>
        <relationshipName>ictrdvdmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_qtyiss__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Quantity Issued</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_seqno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Sequence No</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_serialshipind__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Serial Ship Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ictrdvdmdcsts</relationshipLabel>
        <relationshipName>ictrdvdmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_srlno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvdmdcst_ucstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Fringe Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Lab Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Mach Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Mtl Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ictrdvdmdcst_ucstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Sub Lab</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Unit Cost, Sub Mtl</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrdvdmdcst_wbs__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ictrdvdmdcst</label>
    <nameField>
        <label>ictrdvdmdcst Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ictrdvdmdcsts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>